--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -124,7 +124,9 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /* -default font-
+  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+  font-family: 'Libre Franklin', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222; }
 
 
@@ -133,7 +135,9 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
-  font-weight: 300; }
+  font-weight: 300; 
+  font-family: 'Poppins', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, serif;
+}
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
@@ -422,11 +426,24 @@ there.
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .box {
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 1rem;
 }
 
 #biography {
-  background-color: rgba(255, 0, 255, 15%);
-  border: solid rgba(255, 50, 255, 15%) 0.2rem;
+  background-color: rgba(50, 50, 255, 15%);
+  border: solid rgba(50, 100, 255, 15%) 0.2rem;
+}
+
+.jamey {
+  display: flex;
+  float: left;
+  position: relative;
+  width: 15rem;
+  height: 15rem;
+  object-fit: cover;
+  object-position: 0 0;
+  margin: 0 10px 10px 0;
+  border-radius: 50%;
+  shape-outside: circle();
 }
