--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -43,6 +43,9 @@
 
 /* For devices larger than 400px */
 @media (min-width: 400px) {
+  #navbar {
+    width: 85%;
+  }
   .container {
     width: 85%;
     padding: 0; }
@@ -50,6 +53,9 @@
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
+  #navbar {
+    width: 80%;
+  }
   .container {
     width: 80%; }
   .column,
@@ -175,20 +181,19 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   display: inline-block;
-  height: 38px;
-  padding: 0 30px;
+  height: auto;
+  padding: 0 20px;
   color: #555;
   text-align: center;
-  font-size: 11px;
-  font-weight: 600;
+  font-size: 1.5rem;
   line-height: 38px;
   letter-spacing: .1rem;
-  text-transform: uppercase;
+  text-transform: lowercase;
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
-  border-radius: 4px;
-  border: 1px solid #bbb;
+  border-radius: 5px;
+  border: 0.2rem solid #bbb;
   cursor: pointer;
   box-sizing: border-box; }
 .button:hover,
@@ -209,9 +214,11 @@ button.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
-  color: #FFF;
-  background-color: #33C3F0;
-  border-color: #33C3F0; }
+  font-family: 'Libre Franklin', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #EEE;
+  background-color: rgba(50, 50, 50, 85%);
+  border: solid rgba(50, 50, 50, 85%) 0.2rem; 
+}
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
@@ -222,9 +229,11 @@ button.button-primary:focus,
 input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
-  color: #FFF;
-  background-color: #1EAEDB;
-  border-color: #1EAEDB; }
+  font-family: 'Libre Franklin', "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #EEE;
+  background-color: rgba(25, 25, 25, 85%);
+  border: solid rgba(0, 0, 0, 85%) 0.2rem; 
+}
 
 
 /* Forms
@@ -425,10 +434,17 @@ there.
 /* My Touch
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+/* @media (max-width: 399px) {
+  .sticky {
+    width: 90%;
+  }
+} */
+
 #navbar {
   background-color: white;
   overflow: hidden;
   z-index: 100;
+  max-width: 960px;
 }
 #navbar a {
   float: left;
@@ -439,10 +455,16 @@ there.
   text-decoration: none;
 }
 
+.button-primary{
+  float: right;
+  font-size: 1.5rem;
+  margin: 0 10px 0 0;
+}
+
 .sticky {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 90%;
 }
 
 .title {
